<resources>
    <string name="app_name">协同白板手机端</string>
    <string name="pen">画笔</string>
    <string name="erase">橡皮擦</string>
    <string name="settings">设置</string>
    <string name="undo">撤回</string>
    <string name="redo">前进</string>
    <string name="clear_draw">清屏</string>
    <string name="page_more">新建页</string>
    <string name="page_pre">上一页</string>
    <string name="page_next">下一页</string>
    <string name="page_num">页数</string>
    <string name="page_t_num">%1$d/%2$d</string>
    <string name="page_can_noly">最多只能创建%1$d</string>
    <string name="no_next_page">已经到最后一页了</string>
    <string name="no_pre_page">已经是最新一页</string>
    <string name="gesture">手势</string>
    <string name="exit">退出</string>
    <string name="insert_image">素材</string>
    <string name="more">更多</string>
    <string name="connecting_server">正在连接服务器..</string>
    <string name="connect_server_fail">连接失败</string>
    <string name="client">协同白板</string>
    <string name="no_device_connected">未连接到设备</string>
    <string name="no_device_found">未连接到设备</string>
    <string name="choose_device">选择设备</string>
    <string name="check_version">检查更新</string>
    <string name="device_name">设备名称</string>
    <string name="scan_connect">扫描连接</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="connect_manual">连接网络</string>
    <string name="scan_device">搜索设备</string>
    <string name="network">网络</string>
    <string name="open_camerafail">打开摄像头失败!</string>
    <string name="rqcode_fail">解析二维码失败</string>
    <string name="device_describe">设备: %1$s\t\tIP: %2$s</string>
    <string name="cannot_connect_server">无法连接服务器</string>
    <string name="lastest_version">已是最新版本</string>
</resources>
